# computer_graphics_rendering

./: CmakeLIsts.txt
CreatSphere/: CMakeLists.txt  Transformation_3D.cpp
GroupWork7/: CMakeLists.txt  clipBack.cpp
SeedFill/: CMakeLists.txt  Transformation_2D.cpp
Spline/: CMakeLists.txt  Transformation_3D.cpp
TextureMap/: CMakeLists.txt  TextureMap.cpp
Transformation_3D/: CMakeLists.txt  Transformation_3D.cpp
WeilerAthertonLineClip/: CMakeLists.txt  WeilerAthertonLineClip.cpp
color_map/: CG_framework.cpp  CMakeLists.txt
hello_world/: CG_framework.cpp  CMakeLists.txt  Parameters.cpp  Parameters.hpp
hw10/: CMakeLists.txt  hw10.cpp
hw11/: CMakeLists.txt  hw11.cpp
hw4/: CMakeLists.txt  Transformation_3D.cpp
hw6/: CMakeLists.txt  Transformation_3D.cpp
hw7/: CMakeLists.txt  Transformation_3D.cpp
math/: DataStruct.hpp  Geometry.hpp  Hash.hpp  IO.hpp  Light.hpp  Material.hpp  Primitive.hpp  Ray.hpp  System3D.hpp  System3DHead.hpp  System3DImplementation.hpp  Texture.hpp  Transform.hpp
paint_ellipse/: CG_framework.cpp  CMakeLists.txt
paint_line/: CG_framework.cpp  CMakeLists.txt
parabola/: CG_framework.cpp  CMakeLists.txt
read_image/: CG_framework.cpp  CMakeLists.txt
transform2d/: CG_framework.cpp  CMakeLists.txt
transform2dHW/: CMakeLists.txt  Transformation_2D.cpp
